// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oauth login form renders a login button link 1`] = `
<div
  className="login-wrapper"
>
  <form
    className="login clr-form"
    onSubmit={[Function]}
  >
    <OAuthLogin
      oauthLoginURI="/sign/in"
    />
    <div
      className="login-moreinfo"
    >
      <a
        href="https://github.com/kubeapps/kubeapps/blob/devel/docs/user/access-control.md"
        rel="noopener noreferrer"
        target="_blank"
      >
        <ReactWrapperComponent
          shape="info-circle"
        />
        More Info
      </a>
    </div>
  </form>
</div>
`;

exports[`token login form displays an error if the authentication error is passed 1`] = `
<LoginForm
  appVersion="devel"
  authenticate={[MockFunction]}
  authenticated={false}
  authenticating={false}
  authenticationError="it's a trap"
  checkCookieAuthentication={[MockFunction]}
  cluster="default"
  location={
    Object {
      "hash": "",
      "pathname": "",
      "search": "",
      "state": "",
    }
  }
  oauthLoginURI=""
>
  <div
    className="login-wrapper"
  >
    <form
      className="login clr-form"
      onSubmit={[Function]}
    >
      <TokenLogin
        authenticationError="it's a trap"
        handleTokenChange={[Function]}
        token=""
      >
        <section
          aria-describedby="login-desc"
          aria-labelledby="login-title"
          className="title"
        >
          <h3
            className="welcome"
            id="login-title"
          >
            Welcome to 
            <span>
              Kubeapps
            </span>
          </h3>
          <p
            className="hint"
            id="login-desc"
          >
            Your cluster operator should provide you with a Kubernetes API token.
          </p>
          <div
            className="login-group"
          >
            <div
              className="clr-form-control"
            >
              <label
                className="clr-control-label"
                htmlFor="token"
              >
                Token
              </label>
              <div
                className="clr-control-container"
              >
                <div
                  className="clr-input-wrapper"
                >
                  <input
                    className="clr-input"
                    id="token"
                    onChange={[Function]}
                    placeholder="Paste token here"
                    required={true}
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="error active "
            >
              There was an error connecting to the Kubernetes API. Please check that your token is valid.
            </div>
            <div
              className="login-submit-button"
            >
              <ReactWrapperComponent
                id="login-submit-button"
                status="primary"
              >
                <cds-button>
                  Submit
                </cds-button>
              </ReactWrapperComponent>
            </div>
          </div>
        </section>
      </TokenLogin>
      <div
        className="login-moreinfo"
      >
        <a
          href="https://github.com/kubeapps/kubeapps/blob/devel/docs/user/access-control.md"
          rel="noopener noreferrer"
          target="_blank"
        >
          <ReactWrapperComponent
            shape="info-circle"
          >
            <cds-icon />
          </ReactWrapperComponent>
          More Info
        </a>
      </div>
    </form>
  </div>
</LoginForm>
`;

exports[`token login form renders a token login form 1`] = `
<div
  className="login-wrapper"
>
  <form
    className="login clr-form"
    onSubmit={[Function]}
  >
    <TokenLogin
      handleTokenChange={[Function]}
      token=""
    />
    <div
      className="login-moreinfo"
    >
      <a
        href="https://github.com/kubeapps/kubeapps/blob/devel/docs/user/access-control.md"
        rel="noopener noreferrer"
        target="_blank"
      >
        <ReactWrapperComponent
          shape="info-circle"
        />
        More Info
      </a>
    </div>
  </form>
</div>
`;

exports[`while authenticating loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
  type={0}
/>
`;
